# tlgp-tools

./: .gitignore  README.md  pyproject.toml
apps/annotator/: README.md  pyproject.toml
apps/annotator/src/annotator/: __init__.py  __main__.py  rendering.py
apps/annotator/src/annotator/api/: __init__.py  app.py  routes.py
apps/annotator/src/annotator/gui/: __init__.py  app.py  callbacks.py  canvas.py  canvas_renderer.py  controller.py  cut_editor.py  cut_editor_state.py  debug.py  design_system.py  dialog_service.py  gestures.py  image_utils.py  io_handler.py  properties.py  qt_dialogs.py  sidebar.py  state.py  theme.py  tk_dialogs.py  tkinter_dialog_service.py  transformer.py  viewport_calculator.py  viewport_context.py
apps/annotator/src/annotator/models/: __init__.py  core.py  tree.py
apps/annotator/src/annotator/workspace/: __init__.py  errors.py  manager.py  ordering.py  validation.py
apps/annotator/tests/: conftest.py  test_api.py  test_canvas_renderer.py  test_concurrency.py  test_cut_editor.py  test_errors.py  test_gui_gesture_edge_cases.py  test_gui_mouse_interactions.py  test_gui_space_pan.py  test_manager.py  test_models.py  test_ordering.py  test_rendering.py  test_rendering_parity.py  test_theme.py  test_transformer.py  test_validation.py  test_viewport_calculator.py  test_websocket.py
apps/doc-generator/: README.md  pyproject.toml
apps/doc-generator/src/doc_generator/: __init__.py  __main__.py  cli.py  doc_builder.py  image_handler.py  models.py  spec_format.toml  style_constants.py  table_builder.py  validation.py
apps/doc-generator/tests/: __init__.py  conftest.py  test_cli.py  test_doc_builder.py  test_image_handler.py  test_models.py  test_style_constants.py  test_table_builder.py  test_validation.py
apps/doc-generator/tests/fixtures/: sample_analysis.json  sample_spec.json
apps/engine/: README.md  pyproject.toml
apps/engine/src/engine/: __main__.py  api.py  app.py  exceptions.py  state.py  tree_math.py
apps/engine/tests/: load_test_websockets.py  test_api.py  test_concurrency.py  test_websocket_queue.py  test_workspace.py
apps/gui/: README.md  pyproject.toml
apps/gui/src/gui/: __main__.py  api_client.py  app.py  canvas.py  cut_editor.py  dialog_service.py  screen_info.py  state.py  tkinter_dialog_service.py
apps/gui/src/gui/controllers/: controller.py
apps/gui/src/gui/domain/: transformer.py  validation.py
apps/gui/src/gui/views/: app.py  canvas.py  debug.py  dialogs.py  gestures.py  properties.py  sidebar.py  transformer.py
apps/gui/tests/: conftest.py  test_api_client_concurrency.py  test_canvas.py  test_controller.py  test_gestures.py  test_lifecycle.py  test_transformer.py  test_validation.py
apps/mcp-server/: README.md  pyproject.toml
apps/mcp-server/src/mcp_server/: __init__.py  __main__.py  client.py  exceptions.py  manager.py  scaffold.py  server.py  services.py  spec_editor.py
apps/mcp-server/src/mcp_server/prompts/: __init__.py  classification_guide.md  example_analysis.json  schema_reference.md  spec_workflow.md  strict_guidelines.md  validation_guide.md  (+1 more)
apps/mcp-server/tests/: conftest.py  test_launch_annotator.py  test_prompts.py  test_resources.py  test_scaffold.py  test_schema_sync.py  test_tools.py  test_workspace_api.py
legacy/tlgp-annotation-tool/: README.md  pyproject.toml
legacy/tlgp-annotation-tool/src/tlgp_annotation_tool/: __init__.py  __main__.py  annotation_renderer.py  app.py  canvas.py  controller.py  cut_editor.py  dialogs.py  exporter.py  history.py  layout_sort.py  models.py  properties.py  sidebar.py
legacy/tlgp-annotation-tool/tests/: test_controller.py  test_cut_segments.py  test_exporter.py  test_history.py  test_layout_sort.py  test_models.py  test_pill_corner.py
libs/contracts/: README.md  pyproject.toml
libs/contracts/src/tlgp_contracts/: __init__.py  docgen.py  example_spec.json  spec.py  spec_schema.json  tree.py  unit_limit.py  workspace.py
libs/contracts/tests/: test_spec.py  test_workspace.py
libs/file-io/: pyproject.toml
libs/file-io/src/file_io/: __init__.py  parser.py
libs/logger/: README.md  pyproject.toml
libs/logger/src/tlgp_logger/: __init__.py  core.py
libs/logger/tests/: test_logger.py
libs/models/: README.md  pyproject.toml
libs/models/src/models/: __init__.py  core.py  tree.py
libs/models/tests/: test_models.py
libs/rendering/: README.md  pyproject.toml
libs/rendering/src/rendering/: __init__.py  renderer.py
libs/rendering/tests/: test_renderer.py
tlgp-annotation-tool/: README.md  pyproject.toml
tlgp-annotation-tool/example_workflow/: create-spec-doc.md
tlgp-annotation-tool/src/tlgp_annotation_tool/: __main__.py  app.py  controller.py  cut_editor.py  exporter.py  history.py  layout_sort.py  models.py  properties.py  sidebar.py
tlgp-annotation-tool/tests/: test_controller.py  test_cut_segments.py  test_history.py  test_layout_sort.py  test_pill_corner.py
tlgp-annotation-tool/workflow/: .~lock.poc_sample.docx#  create-spec-doc.md  extract_heading_ranges.py  extract_placeholder_indices.py  extract_table_ranges.py  poc_docx_test.py  poc_sample.docx
tlgp-doc-generator/: README.md  pyproject.toml
tlgp-doc-generator/src/tlgp_doc_generator/: __main__.py  cli.py  doc_builder.py  image_handler.py  models.py  spec_format.toml  style_constants.py  table_builder.py
tlgp-doc-generator/tests/: __init__.py  test_cli.py  test_doc_builder.py  test_image_handler.py  test_models.py  test_table_builder.py
tlgp-doc-generator/tests/fixtures/: output_test.docx  sample_analysis.json
tlgp-mcp-server/: README.md  pyproject.toml
tlgp-mcp-server/src/tlgp_mcp_server/: __main__.py  server.py
tlgp-mcp-server/src/tlgp_mcp_server/prompts/: __init__.py  spec_workflow.md
tlgp-mcp-server/src/tlgp_mcp_server/resources/: __init__.py
tlgp-mcp-server/src/tlgp_mcp_server/tools/: finalize.py  generate_docx.py  generate_spec_doc.py  launch_annotator.py  list_exports.py  parse_annotations.py  prepare_analysis.py  scaffold_analysis.py  update_analysis.py  validate_analysis.py
tlgp-mcp-server/tests/: test_prompts.py  test_resources.py  test_tools.py
(+19 files in other folders)
