[project]
name = "tlgp-mcp-server"
version = "0.1.0"
description = "MCP server exposing the TLGP annotation + doc generation toolchain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "tlgp-doc-generator",
]

[project.scripts]
tlgp-mcp = "tlgp_mcp_server.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv.sources]
tlgp-doc-generator = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlgp_mcp_server"]
