[project]
name = "annotator"
version = "0.1.0"
description = "Desktop annotation tool for TLGP screen analysis"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "jsonpatch>=1.33",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "PySide6>=6.8",
    "uvicorn>=0.49.0",
    "tlgp-logger",
]

[tool.uv.sources]
tlgp-logger = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/annotator"]
