[project]
name = "doc-generator"
version = "0.1.0"
description = "Generate TLGP screen spec .docx from analysis.json"
readme = "README.md"
authors = [
    { name = "VinhNgT", email = "victorpublic0000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "python-docx>=1.1.0",
    "pydantic>=2.13.4",
    "tlgp-logger",
]

[project.scripts]
doc-gen = "doc_generator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tlgp-logger = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/doc_generator"]
