[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "file-io",
    "jsonpatch>=1.33",
    "models",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
models = { workspace = true }
file-io = { workspace = true }
