[project]
name = "engine"
version = "0.1.0"
description = "FastAPI backend service that manages collaborative state synchronization (via WebSockets/JSON Patches) and tree math"
readme = "README.md"
authors = [
    { name = "VinhNgT", email = "victorpublic0000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "jsonpatch>=1.33",
    "models",
    "rendering",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "tlgp-logger",
]

[tool.uv.sources]
models = { workspace = true }
rendering = { workspace = true }
tlgp-logger = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]
