[project]
name = "gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonpatch>=1.33",
    "models",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "tkinterdnd2-universal>=1.7.3",
    "websockets>=16.0",
    "tlgp-logger",
]

[tool.uv.sources]
models = { workspace = true }
tlgp-logger = { workspace = true }
