[project]
name = "gui"
version = "0.1.0"
description = "Tkinter desktop GUI for drawing bounding boxes, setting cut lines, and marking component hierarchy"
readme = "README.md"
authors = [
    { name = "VinhNgT", email = "victorpublic0000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "jsonpatch>=1.33",
    "models",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "tkinterdnd2-universal>=1.7.3",
    "websockets>=16.0",
    "tlgp-logger",
]

[tool.uv.sources]
models = { workspace = true }
tlgp-logger = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gui"]
