[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server exposing the TLGP annotation + doc generation toolchain"
readme = "README.md"
authors = [
    { name = "VinhNgT", email = "victorpublic0000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0",
    "doc-generator",
    "httpx>=0.27.0",
    "tlgp-logger",
]

[project.scripts]
mcp-server-cmd = "mcp_server.__main__:main"

[tool.uv.sources]
doc-generator = { workspace = true }
tlgp-logger = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
