[project]
name = "tlgp-contracts"
version = "0.1.0"
description = "Shared Pydantic schemas defining the contracts between TLGP modules"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlgp_contracts"]
