[project]
name = "tlgp-logger"
version = "0.1.0"
description = "Structured logging library for tlgp-tools"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlgp_logger"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
