[project]
name = "rendering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VinhNgT", email = "victorpublic0000@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "models",
    "pillow>=12.2.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
models = { workspace = true }
